--- a/HTML/basic_detail.html
+++ b/HTML/basic_detail.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Basic Detail - Mighty Shambel</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="header">
