--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#portfolio">Portfolio</a>
           <a href="#contact">Contact</a>
          </nav>
-         <div class="bx bx-moon" id="darkMode-icon"></div>
+        
 
          <div class="bx bx-menu" id="menu-icon"></div>
         </header>
@@ -37,7 +37,7 @@
                <a href="#"><i class='bx bxl-instagram'></i></a>
                <a href="#"><i class='bx bxl-facebook'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+           
            </div>
 
            <div class="home-img" >
@@ -50,21 +50,19 @@
             <div class="services-container">
             <div class="services-box">
                 <h3>Bio</h3>
-                <p>I'm Mighty Shambel,hardworking and motivated person who is ready to learn 
-                    new things and bring out my ideas in solving problems.</p>
-                    <a href="bio.html" class="btn"> Read More</a>
+                <p>a paragraph describing, interest, competence, career plans..</p>
+                    <a href="./HTML/bio.html" class="btn"> Read More</a>
             </div>
             <div class="services-box">
                 <h3>Basic Detail</h3>
-                <p>I'm Mighty Shambel,hardworking and motivated person who is ready to learn 
-                    new things and bring out my ideas in solving problems.</p>
-                    <a href="basic_detail.html" class="btn"> Read More</a>
+                <p>complete with a picture, full name, Address, Date of birth, place of birth and career 
+                    of choice</p>
+                    <a href="./HTML/basic_detail.html" class="btn"> Read More</a>
             </div>
             <div class="services-box">
                 <h3>Education </h3>
-                <p>I'm Mighty Shambel,hardworking and motivated person who is ready to learn 
-                    new things and bring out my ideas in solving problems.</p>
-                    <a href="eduaction.html" class="btn"> Read More</a>
+                <p> primary school details, high school details and higher education details</p>
+                    <a href="./HTML/eduaction.html" class="btn"> Read More</a>
             </div>
             </div>
          </section>
